package me.palla.entity;

import me.palla.value.Value;

public class BallEntity implements Entity {

    private float xPos;
    private float yPos;
    private float radius;

    private Value<Float> xSpeed;
    private Value<Float> ySpeed;

    public BallEntity() {

    }

    @Override
    public void onTick() {

    }

    @Override
    public void onRender() {

    }
}
