package me.palla.entity;

public interface Entity {
    void onTick();
    void onRender();
}
