package me.palla.gui;

public class OptionsGui extends BaseGui {
}
