package me.palla.input;

public class InputGyroscope implements InputData {

    private float xAxis;
    private float yAxis;

}
